add animation to modal

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <h1>TicTacToe</h1>
-    <div id='modal' class='modal'>
-      <div> <span id='winner'>BLUE WINS!</span><br /> <span id='reset'>&#x21bb; play again</span></div>
+    <div id='modal' class='modal hidden'>
+     <span id='winner'>BLUE WINS!</span> 
+     <span id='reset'>&#x21bb; play again</span>
     </div>
     <div id="par" class="parent">
       <div id="0">&nbsp;</div>
