--- a/index.html
+++ b/index.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>TicTacToe</title>
-    <link rel='manifest' href='/manifest.json'>
-    <link rel="stylesheet" href="stylesheet.css" />
-  </head>
-  <body>
-    <h1>TicTacToe</h1>
-    <div id='modal' class='modal hidden'>
-     <span id='winner'>BLUE WINS!</span> 
-     <span id='reset'>&#x21bb; play again</span>
-    </div>
-    <div id="par" class="parent">
-      <div id="0">&nbsp;</div>
-      <div id="1">&nbsp;</div>
-      <div id="2">&nbsp;</div>
-      <div id="3">&nbsp;</div>
-      <div id="4">&nbsp;</div>
-      <div id="5">&nbsp;</div>
-      <div id="6">&nbsp;</div>
-      <div id="7">&nbsp;</div>
-      <div id="8">&nbsp;</div>
-    </div id="par">
-    <script src="script.js"></script>
-    <script>// This is the "Offline copy of pages" service worker
 
-      // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
-      
-      // Check compatibility for the browser we're running this in
-      if ("serviceWorker" in navigator) {
-        if (navigator.serviceWorker.controller) {
-          console.log("[PWA Builder] active service worker found, no need to register");
-        } else {
-          // Register the service worker
-          navigator.serviceWorker
-            .register("pwabuilder-sw.js", {
-              scope: "./"
-            })
-            .then(function (reg) {
-              console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
-            });
-        }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>TicTacToe</title>
+  <link rel='manifest' href='/manifest.json'>
+  <link rel="stylesheet" href="stylesheet.css" />
+</head>
+
+<body>
+  <h1>Tic Tac Toe</h1>
+  <div class='modal hidden'>
+    <span id='winner'>BLUE WINS!</span>
+    <span id='reset'>&#x21bb; play again</span>
+  </div>
+  <div class="ttt-area">
+    <div id="0">&nbsp;</div>
+    <div id="1">&nbsp;</div>
+    <div id="2">&nbsp;</div>
+    <div id="3">&nbsp;</div>
+    <div id="4">&nbsp;</div>
+    <div id="5">&nbsp;</div>
+    <div id="6">&nbsp;</div>
+    <div id="7">&nbsp;</div>
+    <div id="8">&nbsp;</div>
+  </div id="par">
+  <script src="script.js"></script>
+  <script>// This is the "Offline copy of pages" service worker
+
+    // Add this below content to your HTML page, or add the js file to your page at the very top to register service worker
+
+    // Check compatibility for the browser we're running this in
+    if ("serviceWorker" in navigator) {
+      if (navigator.serviceWorker.controller) {
+        console.log("[PWA Builder] active service worker found, no need to register");
+      } else {
+        // Register the service worker
+        navigator.serviceWorker
+          .register("pwabuilder-sw.js", {
+            scope: "./"
+          })
+          .then(function (reg) {
+            console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+          });
       }
-      
-      </script>
-  </body>
+    }
+
+  </script>
+</body>
+
 </html>
