--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
 </head>
 
 <body>
-  <h1>Tic Tac Toe</h1>
   <div class='modal hidden'>
     <span id='winner'>BLUE WINS!</span>
     <span id='reset'>&#x21bb; play again</span>
   </div>
+  <div class="layer"></div>
+  <h1>Tic Tac Toe</h1>
+
   <div class="ttt-area">
-    <div id="0">&nbsp;</div>
-    <div id="1">&nbsp;</div>
-    <div id="2">&nbsp;</div>
-    <div id="3">&nbsp;</div>
-    <div id="4">&nbsp;</div>
-    <div id="5">&nbsp;</div>
-    <div id="6">&nbsp;</div>
-    <div id="7">&nbsp;</div>
-    <div id="8">&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
+    <div>&nbsp;</div>
   </div id="par">
   <script src="script.js"></script>
   <script>// This is the "Offline copy of pages" service worker
