--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
   <div class='modal hidden'>
-    <span id='winner'>BLUE WINS!</span>
-    <span id='reset'>&#x21bb; play again</span>
+    <span class='winner'>BLUE WINS!</span>
+    <span class="points">0:0</span>
+    <span class='reset'>&#x21bb; play again</span>
   </div>
   <div class="layer"></div>
   <h1>Tic Tac Toe</h1>
@@ -28,7 +29,8 @@
     <div>&nbsp;</div>
     <div>&nbsp;</div>
     <div>&nbsp;</div>
-  </div id="par">
+  </div>
+
   <script src="script.js"></script>
   <script>// This is the "Offline copy of pages" service worker
 
