--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
   <div class='modal hidden'>
     <span class='winner'>BLUE WINS!</span>
-    <span class="points">0:0</span>
     <span class='reset'>&#x21bb; play again</span>
   </div>
   <div class="layer"></div>
@@ -30,7 +29,7 @@
     <div>&nbsp;</div>
     <div>&nbsp;</div>
   </div>
-
+<div class="score"> <span class="a">0</span> : <span class="b">0</span></div>
   <script src="script.js"></script>
   <script>// This is the "Offline copy of pages" service worker
 
